--- a/DatePicker/DatePicker/Base.lproj/Main.storyboard
+++ b/DatePicker/DatePicker/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                                 <rect key="frame" x="0.0" y="341" width="390" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <locale key="locale" localeIdentifier="ko_KR"/>
+                                <connections>
+                                    <action selector="changeDatePicker:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Ib-nA-qdS"/>
+                                </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="선택시간:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLG-Sd-4Va">
                                 <rect key="frame" x="0.0" y="511" width="390" height="60"/>
@@ -39,6 +42,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="IblCurrentTime" destination="1fa-P8-3vF" id="6oj-QI-m06"/>
+                        <outlet property="lblCurrentTime" destination="1fa-P8-3vF" id="gr3-Ot-ewD"/>
+                        <outlet property="lblPickerTime" destination="pLG-Sd-4Va" id="mFP-Gh-iUP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
