--- a/PageControl/PageControl/Base.lproj/Main.storyboard
+++ b/PageControl/PageControl/Base.lproj/Main.storyboard
@@ -23,11 +23,18 @@
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="VH5-zq-cOy">
                                 <rect key="frame" x="16" y="782" width="358" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="pageChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="tUE-ex-jJE"/>
+                                </connections>
                             </pageControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="imgView" destination="UsL-Yh-gLE" id="04e-vt-kyo"/>
+                        <outlet property="pageControl" destination="VH5-zq-cOy" id="9F6-Dl-Y8U"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
